--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,10 @@ publishing {
 			groupId 'com.placetopay'
             		artifactId 'java-placetopay'
             		version '1.0'
+                        artifact sourcesJar 
+                        artifact javadocJar
 		}
 	}
-        artifact sourcesJar 
-        artifact javadocJar
 }
 
 bintray {	
@@ -90,5 +90,5 @@ dependencies {
     //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
     testCompile group: 'junit', name: 'junit', version: '4.10'
     compile 'org.json:json:20160810'
-    compile 'org.skyscreamer:jsonassert:1.5.0'
+    testCompile 'org.skyscreamer:jsonassert:1.5.0'
 }
