--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'com.placetopay'
-version = '1.0.2'
+version = '1.0.4'
 
 allprojects {
 	repositories {
@@ -50,15 +50,44 @@ artifacts {
     archives sourcesJar, javadocJar
 }
 
+// Create the pom configuration:
+def pomConfig = {
+    licenses {
+        license {
+            name "MIT License"
+            url "http://www.opensource.org/licenses/mit-license.php"
+            distribution "repo"
+        }
+    }
+    developers {
+        developer {
+            id "placetopay"
+            name "PlacetoPay Developer"
+            email "desarrollo@placetopay.com"
+        }
+    }
+    
+    scm {
+       url "https://github.com/placetopay/java_placetopay"
+    }
+}
+
 publishing {
 	publications {
 		MyPublication(MavenPublication) {
 			from components.java
 			groupId 'com.placetopay'
             		artifactId 'java-placetopay'
-            		version '1.0.2'
+            		version '1.0.4'
                         artifact sourcesJar 
                         artifact javadocJar
+                        pom.withXml {
+                            def root = asNode()
+                            root.appendNode('description', 'With this code you will be able to quickly connect with the PlacetoPay redirection service.')
+                            root.appendNode('name', 'PlacetoPay Redirection Java library')
+                            root.appendNode('url', 'https://dev.placetopay.com/')
+                            root.children().last() + pomConfig
+                        }
 		}
 	}
 }
@@ -73,7 +102,7 @@ bintray {
 		licenses = ['MIT']
 		vcsUrl = 'https://github.com/placetopay/java_placetopay.git'
 		version {
-			name = '1.0.2'
+			name = '1.0.4'
 			desc = 'Library to connect with PlacetoPay Redirection service'
 			//vcsTag = '1.0'
 			attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
