--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'com.placetopay'
-version = '1.0.4'
+version = '1.0.5'
 
 allprojects {
 	repositories {
@@ -19,7 +19,6 @@ allprojects {
 	apply plugin: 'maven-publish'
 	apply plugin: 'java'
         
-        sourceCompatibility = '1.6'
         [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
         // NetBeans will automatically add "run" and "debug" tasks relying on the
@@ -78,7 +77,7 @@ publishing {
 			from components.java
 			groupId 'com.placetopay'
             		artifactId 'java-placetopay'
-            		version '1.0.4'
+            		version '1.0.5'
                         artifact sourcesJar 
                         artifact javadocJar
                         pom.withXml {
@@ -99,12 +98,18 @@ bintray {
 	pkg {
 		repo = 'maven'
 		name = 'java-placetopay'
+                desc = 'With this code you will be able to quickly connect with the PlacetoPay redirection service.'
 		licenses = ['MIT']
+                websiteUrl = 'https://github.com/placetopay/java-placetopay'
+                issueTrackerUrl = 'https://github.com/placetopay/java-placetopay/issues'
 		vcsUrl = 'https://github.com/placetopay/java_placetopay.git'
+                githubRepo = 'placetopay/java-placetopay' //Optional Github repository
+                githubReleaseNotesFile = 'README.md' //Optional Github readme file
 		version {
-			name = '1.0.4'
+			name = '1.0.5'
 			desc = 'Library to connect with PlacetoPay Redirection service'
-			//vcsTag = '1.0'
+			released = new Date()
+                        vcsTag = '1.0.5'
 			attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
 		}	
 	}
