--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 gradle/wrapper/gradle-wrapper.properties
 gradle.properties
+java-placetopay.properties
+java-placetopay.xml
