--- a/src/test/java/com/placetopay/java_placetopay/test.properties
+++ b/src/test/java/com/placetopay/java_placetopay/test.properties
@@ -19,6 +19,6 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
-login=6dd490faf9cb87a9862245da41170ff2
-tranKey=024h1IlD
-url=https://dev.placetopay.com/redirection
+login=
+tranKey=
+url=
